# fintech

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AMTTP_Final_Test_Report.docx  AMTTP_ROADMAP.md  AMTTP_Testing_Guide.docx  AMTTP_Testing_Guide_With_Results.docx  ARCHITECTURE_DIAGRAM.md  BEST_APPROACH_RECOMMENDATION.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.prebuilt  EXPOSE_WEB.ps1  FCA_COMPLIANCE.md  FILE_INDEX.md  FLUTTER_CONSUMER_APP.md  HISTORICAL_ENV_SETUP.md  IMPLEMENTATION_STATUS_REPORT.md  KLEROS_INTEGRATION.md  LABEL_UNIFICATION_GUIDE.md  LAYERZERO_INTEGRATION.md  LICENCE  MATHEMATICAL_FORMULATION.md  ML_ARCHITECTURE_DIAGRAM.md  Makefile  PERSONAL_STATEMENT_DRAFT.md  PERSONAL_STATEMENT_V2.md  PORT_USAGE.md  PROJECT_DOCUMENTATION.md  QUICK_START_GUIDE.md  RBAC_MAPPING.md  README.md  REVIEWER_GUIDE.md  SDK_README.md  START_ALL_SERVICES.ps1  START_DOCKER.ps1  START_SERVICES.ps1  (+74 more)
.openzeppelin/: sepolia.json
adaptive-friction-stability/: 02_KERNEL_ANALYSIS.md  05_THEORETICAL_FRAMEWORK.md  07_RESEARCH_PLAN.md  08_UNIFIED_PAPER.md
adaptive-friction-stability-upgraded/: 06_RL_ARCHITECTURE.md  07_RESEARCH_PLAN.md  verify_gradient_alignment.py
audit/: AUDIT_CHECKLIST.md  AUDIT_REPORT_TEMPLATE.md  SECURITY_AUDIT_REPORT.md  echidna.yaml  run-audit.sh  slither.config.json  slither_zknaf.txt
automation/: automation_cli.py  bigquery_fetcher.py  eth_data_fetcher.py  memgraph_ingest.py  relabel_eth_30d_from_etherscan.py  requirements.txt  test_request.json  test_score.json
cache/: solidity-files-cache.json  validations.json
client-sdk/: MEV_PROTECTION.md  README.md  (+5 more)
client-sdk-python/: README.md  pyproject.toml
client-sdk-python/amttp/: __init__.py  client.py  errors.py  events.py
client-sdk-python/amttp/services/: __init__.py  base.py  bulk.py  compliance.py  dashboard.py  dispute.py  edd.py  explainability.py  geographic.py  governance.py  integrity.py  kyc.py  label.py  mev.py  monitoring.py  pep.py  policy.py  profile.py  reputation.py  risk.py  sanctions.py  transaction.py  webhook.py
client-sdk-python/examples/: basic_usage.py  event_monitoring.py
client-sdk-python/tests/: test_sdk.py
mfls-sdk/: README.md  detailed_analysis_results.json  global_analysis_results.json  live_prediction_results.json  pyproject.toml  run_detailed_analysis.py  run_global_analysis.py  run_gsib_predictions.py  run_live_predictions.py  run_variant_analysis.py  variant_analysis_results.json
mfls-sdk/examples/: bank_audit.py  quickstart.py
mfls-sdk/mfls/: __init__.py  engine.py
mfls-sdk/mfls/api/: __init__.py  app.py  models.py
mfls-sdk/mfls/core/: __init__.py  bsdt.py  energy.py  network.py  scoring.py
mfls-sdk/mfls/data/: fdic.py  loaders.py
mfls-sdk/mfls/evaluation/: __init__.py  backtest.py  bootstrap.py  causality.py
mfls-sdk/mfls/signals/: __init__.py  pipeline.py
mfls-sdk/tests/: test_api.py  test_bsdt.py  test_engine.py  test_scoring.py
(+1602 files in other folders)
