[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amttp-sdk"
version = "1.0.0"
description = "Python SDK for the AMTTP (Advanced Money Transfer Transaction Protocol) compliance platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AMTTP Team" },
]
keywords = ["amttp", "aml", "compliance", "risk-scoring", "crypto", "fintech", "sanctions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
websockets = ["websockets>=12.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/segetii/fintech"
Documentation = "https://github.com/segetii/fintech/tree/main/client-sdk-python"
Repository = "https://github.com/segetii/fintech"

[tool.hatch.build.targets.wheel]
packages = ["amttp"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
